--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -66,7 +66,7 @@ SCC_CU_INC := -I${SCC_DIR}/ -I${SCC_DIR}/Util -I${SCC_DIR}/include -I${SCC_DIR}/
 
 GRAPH_CU_INC := -I${GRAPH_DIR}/ -I${GRAPH_DIR}/Util -I${GRAPH_DIR}/include -I${GRAPH_DIR}/include/device -I${GRAPH_DIR}/cub-1.4.0 -I${GRAPH_DIR}/include/host
 
-CU_FLAGS := -m64 -std=c++11 -Xcompiler=-O3,-fPIC,-march=native,-funroll-loops -w -use_fast_math -D_FORCE_INLINES -DBOOST_FOUND -DNVCC -Wno-deprecated-gpu-targets -rdc=true  $(GENCODE_FLAGS) --ptxas-options=-v -maxrregcount=32
+CU_FLAGS := -m64 -std=c++11 -Xcompiler=-O3,-fPIC,-march=native,-funroll-loops -w -use_fast_math -D_FORCE_INLINES -DBOOST_FOUND -DNVCC -Wno-deprecated-gpu-targets -rdc=true  $(GENCODE_FLAGS) --ptxas-options=-v -maxrregcount=32 -D THRUST_IGNORE_CUB_VERSION_CHECK
 
 
 OS := $(shell uname -s)
